app/globals.css
@import 'tailwindcss';
@import 'tw-animate-css';
@import 'shadcn/tailwind.css';

@custom-variant dark (&:is(.dark *));

:root {
    --titlebar-height: 2rem;
    font-size: 16px;
    line-height: 24px;
    font-weight: 400;

    color: #0f0f0f;
    background-color: #f6f6f6;

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-text-size-adjust: 100%;
    --destructive-foreground: var(--color-red-700);
    --info: var(--color-blue-500);
    --info-foreground: var(--color-blue-700);
    --success: var(--color-emerald-500);
    --success-foreground: var(--color-emerald-700);
    --warning: var(--color-amber-500);
    --warning-foreground: var(--color-amber-700);
    --background: var(--color-white);
    --foreground: var(--color-neutral-800);
    --card: var(--color-white);
    --card-foreground: var(--color-neutral-800);
    --popover: var(--color-white);
    --popover-foreground: var(--color-neutral-800);
    --primary: var(--color-neutral-800);
    --primary-foreground: var(--color-neutral-50);
    --secondary: --alpha(var(--color-black) / 4%);
    --secondary-foreground: var(--color-neutral-800);
    --muted: --alpha(var(--color-black) / 4%);
    --muted-foreground: color-mix(in srgb, var(--color-neutral-500) 90%, var(--color-black));
    --accent: --alpha(var(--color-black) / 4%);
    --accent-foreground: var(--color-neutral-800);
    --destructive: var(--color-red-500);
    --border: --alpha(var(--color-black) / 8%);
    --input: --alpha(var(--color-black) / 10%);
    --ring: var(--color-neutral-400);
    --chart-1: var(--color-orange-600);
    --chart-2: var(--color-teal-600);
    --chart-3: var(--color-cyan-900);
    --chart-4: var(--color-amber-400);
    --chart-5: var(--color-amber-500);
    --radius: 0.625rem;
    --sidebar: var(--color-neutral-50);
    --sidebar-foreground: color-mix(in srgb, var(--color-neutral-800) 64%, var(--sidebar));
    --sidebar-primary: var(--color-neutral-800);
    --sidebar-primary-foreground: var(--color-neutral-50);
    --sidebar-accent: --alpha(var(--color-black) / 4%);
    --sidebar-accent-foreground: var(--color-neutral-800);
    --sidebar-border: --alpha(var(--color-black) / 6%);
    --sidebar-ring: var(--color-neutral-400);
    --code: var(--color-white);
    --code-foreground: var(--foreground);
    --code-highlight: --alpha(var(--color-black) / 4%);
}

@theme inline {
    --animate-skeleton: skeleton 2s -1s infinite linear;
    --font-heading: var(--font-heading);
    --animate-caret-blink: 1s ease-out infinite caret-blink;
    --animate-toast-success-odd: toast-success-odd 0.32s cubic-bezier(0.5, 1, 0.89, 1);
    --animate-toast-success-even: toast-success-even 0.32s cubic-bezier(0.5, 1, 0.89, 1);
    --animate-toast-error-odd: toast-error-odd 0.28s cubic-bezier(0.5, 1, 0.89, 1);
    --animate-toast-error-even: toast-error-even 0.28s cubic-bezier(0.5, 1, 0.89, 1);
    --font-sans: var(--font-sans);
    --color-sidebar-ring: var(--sidebar-ring);
    --color-sidebar-border: var(--sidebar-border);
    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
    --color-sidebar-accent: var(--sidebar-accent);
    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
    --color-sidebar-primary: var(--sidebar-primary);
    --color-sidebar-foreground: var(--sidebar-foreground);
    --color-sidebar: var(--sidebar);
    --color-chart-5: var(--chart-5);
    --color-chart-4: var(--chart-4);
    --color-chart-3: var(--chart-3);
    --color-chart-2: var(--chart-2);
    --color-chart-1: var(--chart-1);
    --color-ring: var(--ring);
    --color-input: var(--input);
    --color-border: var(--border);
    --color-destructive: var(--destructive);
    --color-accent-foreground: var(--accent-foreground);
    --color-accent: var(--accent);
    --color-muted-foreground: var(--muted-foreground);
    --color-muted: var(--muted);
    --color-secondary-foreground: var(--secondary-foreground);
    --color-secondary: var(--secondary);
    --color-primary-foreground: var(--primary-foreground);
    --color-primary: var(--primary);
    --color-popover-foreground: var(--popover-foreground);
    --color-popover: var(--popover);
    --color-card-foreground: var(--card-foreground);
    --color-card: var(--card);
    --color-foreground: var(--foreground);
    --color-background: var(--background);
    --color-warning-foreground: var(--warning-foreground);
    --color-warning: var(--warning);
    --color-success-foreground: var(--success-foreground);
    --color-success: var(--success);
    --color-info-foreground: var(--info-foreground);
    --color-info: var(--info);
    --color-destructive-foreground: var(--destructive-foreground);
    --radius-sm: calc(var(--radius) * 0.6);
    --radius-md: calc(var(--radius) * 0.8);
    --radius-lg: var(--radius);
    --radius-xl: calc(var(--radius) * 1.4);
    --radius-2xl: calc(var(--radius) * 1.8);
    --radius-3xl: calc(var(--radius) * 2.2);
    --radius-4xl: calc(var(--radius) * 2.6);
    @keyframes skeleton {
        to {
            background-position: -200% 0;
        }
    }
    @keyframes caret-blink {
        0%,
        70%,
        to {
            opacity: 1;
        }
        20%,
        50% {
            opacity: 0;
        }
    }
    @keyframes toast-success-odd {
        0% {
            scale: 1;
        }
        30% {
            scale: 1.025;
        }
        60% {
            scale: 0.99;
        }
        100% {
            scale: 1;
        }
    }
    @keyframes toast-error-odd {
        0% {
            translate: 0 0;
        }
        25% {
            translate: -3px 0;
        }
        50% {
            translate: 3px 0;
        }
        75% {
            translate: -3px 0;
        }
        100% {
            translate: 0 0;
        }
    }
    @keyframes toast-success-even {
        0% {
            scale: 1;
        }
        30% {
            scale: 1.025;
        }
        60% {
            scale: 0.99;
        }
        100% {
            scale: 1;
        }
    }
    @keyframes toast-error-even {
        0% {
            translate: 0 0;
        }
        25% {
            translate: -3px 0;
        }
        50% {
            translate: 3px 0;
        }
        75% {
            translate: -3px 0;
        }
        100% {
            translate: 0 0;
        }
    }
    --font-mono: var(--font-mono);
    --color-code-highlight: var(--code-highlight);
    --code-foreground: var(--code-foreground);
    --color-code: var(--code);
}

.dark {
    --destructive-foreground: var(--color-red-400);
    --info: var(--color-blue-500);
    --info-foreground: var(--color-blue-400);
    --success: var(--color-emerald-500);
    --success-foreground: var(--color-emerald-400);
    --warning: var(--color-amber-500);
    --warning-foreground: var(--color-amber-400);
    --background: color-mix(in srgb, var(--color-neutral-950) 95%, var(--color-white));
    --foreground: var(--color-neutral-100);
    --card: color-mix(in srgb, var(--background) 98%, var(--color-white));
    --card-foreground: var(--color-neutral-100);
    --popover: color-mix(in srgb, var(--background) 98%, var(--color-white));
    --popover-foreground: var(--color-neutral-100);
    --primary: var(--color-neutral-100);
    --primary-foreground: var(--color-neutral-800);
    --secondary: --alpha(var(--color-white) / 4%);
    --secondary-foreground: var(--color-neutral-100);
    --muted: --alpha(var(--color-white) / 4%);
    --muted-foreground: color-mix(in srgb, var(--color-neutral-500) 90%, var(--color-white));
    --accent: --alpha(var(--color-white) / 4%);
    --accent-foreground: var(--color-neutral-100);
    --destructive: color-mix(in srgb, var(--color-red-500) 90%, var(--color-white));
    --border: --alpha(var(--color-white) / 6%);
    --input: --alpha(var(--color-white) / 8%);
    --ring: var(--color-neutral-500);
    --chart-1: var(--color-blue-700);
    --chart-2: var(--color-emerald-500);
    --chart-3: var(--color-amber-500);
    --chart-4: var(--color-purple-500);
    --chart-5: var(--color-rose-500);
    --sidebar: color-mix(in srgb, var(--color-neutral-950) 97%, var(--color-white));
    --sidebar-foreground: color-mix(in srgb, var(--color-neutral-100) 64%, var(--sidebar));
    --sidebar-primary: var(--color-neutral-100);
    --sidebar-primary-foreground: var(--color-neutral-800);
    --sidebar-accent: --alpha(var(--color-white) / 4%);
    --sidebar-accent-foreground: var(--color-neutral-100);
    --sidebar-border: --alpha(var(--color-white) / 5%);
    --sidebar-ring: var(--color-neutral-400);
    --code: color-mix(in srgb, var(--background) 98%, var(--color-white));
    --code-foreground: var(--foreground);
    --code-highlight: --alpha(var(--color-white) / 4%);
}

@layer base {
    * {
        @apply border-border outline-ring/50;
    }
    html,
    body {
        @apply h-full w-full overflow-hidden bg-background text-foreground;
    }
    html {
        @apply font-sans;
    }
    code,
    kbd,
    samp,
    pre {
        font-family: var(--font-mono);
    }
}

